--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
+        "khepin/yaml-fixtures-bundle": "~0.8.1",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
         "incenteev/composer-parameter-handler": "~2.0"
     },
     "require-dev": {
