--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,6 @@ brioche_core:
     resource: "@BriocheCoreBundle/Resources/config/routing.yml"
     prefix:   /
 
+brioche_core_fosuser:
+    resource: "@BriocheCoreBundle/Resources/config/routingFosUser.yml"
+    prefix:   /
