--- a/src/Brioche/CoreBundle/Resources/config/services.yml
+++ b/src/Brioche/CoreBundle/Resources/config/services.yml
@@ -1,7 +1,3 @@
-parameters:
-#    brioche_core.example.class: Brioche\CoreBundle\Example
-
 services:
-#    brioche_core.example:
-#        class: %brioche_core.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    brioche_core.brioche_manager:
+        class: Brioche\CoreBundle\Services\BriocheManager
