add Size and price to Size and Extra

--- a/src/Brioche/CoreBundle/DataFixtures/extra.yml
+++ b/src/Brioche/CoreBundle/DataFixtures/extra.yml
@@ -2,5 +2,7 @@ model: Brioche\CoreBundle\Entity\Extra
 fixtures:
     figue:
         title: 'Figue'
+        price: 2
     raisin:
         title: 'Raisins secs'
+        price: 2
