--- a/src/Brioche/CoreBundle/DataFixtures/extra.yml
+++ b/src/Brioche/CoreBundle/DataFixtures/extra.yml
@@ -1,5 +1,8 @@
 model: Brioche\CoreBundle\Entity\Extra
 fixtures:
+    nature:
+        title: 'Nature'
+        price: 0
     figue:
         title: 'Figue'
         price: 2
