--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,6 @@
+phax:
+    resource: "@PhaxCoreBundle/Resources/config/routing.yml"
+    
 brioche_core:
     resource: "@BriocheCoreBundle/Resources/config/routing.yml"
     prefix:   /
