--- a/src/Brioche/CoreBundle/Resources/config/services.yml
+++ b/src/Brioche/CoreBundle/Resources/config/services.yml
@@ -5,3 +5,8 @@ services:
     brioche_core.brioche_builder:
         class: Brioche\CoreBundle\Services\BriocheBuilder
         arguments: [@doctrine.orm.entity_manager, @session, @brioche_core.brioche_manager]
+        
+    twig.extension.intl:
+            class: Twig_Extensions_Extension_Intl
+            tags:
+                - { name: twig.extension }
