use AlcalynPayplugBundle, redirect to payment page, add firstname and lastname to client

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,3 +17,10 @@ parameters:
     debug_toolbar:          true
     debug_redirects:        false
     use_assetic_controller: true
+
+    payplug.account.url: null
+    payplug.account.amount_min: null
+    payplug.account.amount_max: null
+    payplug.account.currencies: null
+    payplug.account.payplugPublicKey: null
+    payplug.account.yourPrivateKey: null
