--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "khepin/yaml-fixtures-bundle": "~0.8.1",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "incenteev/composer-parameter-handler": "~2.0",
+        "alcalyn/payplug-bundle": "0.x",
         "alcalyn/flush-on-kernel-terminate-bundle": "dev-master"
     },
     "require-dev": {
