--- a/src/Brioche/CoreBundle/Resources/config/services.yml
+++ b/src/Brioche/CoreBundle/Resources/config/services.yml
@@ -9,3 +9,7 @@ services:
     brioche_core.brioche_payment:
         class: Brioche\CoreBundle\Services\BriochePaymentService
         arguments: [@payplug.payment]
+        
+    brioche_core.brioche_ipn_service:
+        class: Brioche\CoreBundle\Services\BriocheIPNService
+        arguments: [@doctrine.orm.entity_manager, @brioche_core.brioche_builder]
