brioche layout, hide wizard if locked, hide edit on summary page if locked, begin mail service

--- a/src/Brioche/CoreBundle/Resources/config/services.yml
+++ b/src/Brioche/CoreBundle/Resources/config/services.yml
@@ -13,3 +13,7 @@ services:
     brioche_core.brioche_ipn_service:
         class: Brioche\CoreBundle\Services\BriocheIPNService
         arguments: [@doctrine.orm.entity_manager, @brioche_core.brioche_builder]
+        
+    brioche_core.mailer:
+        class: Brioche\CoreBundle\Services\MailService
+        arguments: [@swiftmailer.mailer]
