add console bundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,3 +9,6 @@ brioche_core:
 brioche_core_fosuser:
     resource: "@BriocheCoreBundle/Resources/config/routingFosUser.yml"
     prefix:   /
+
+console:
+    resource: "@CoreSphereConsoleBundle/Resources/config/routing.yml"
