--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,7 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: false
     bundles:        [ ]
+    read_from: "%kernel.root_dir%/%dir_web%"
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
@@ -70,7 +71,9 @@ swiftmailer:
     port:      "%mailer_port%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
-    spool:     { type: memory }
+    spool:
+        type: file
+        path: "%kernel.root_dir%/spool"
 
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
