--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,6 +14,7 @@ parameters:
 
     locale:            fr
     secret:            ILoveBrioches
+    dir_web:           '../web'
 
     debug_toolbar:          true
     debug_redirects:        false
