--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,7 +72,7 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:
-        type: file
+        type: %swiftmailer_spool_type%
         path: "%kernel.root_dir%/spool"
 
 fos_user:
