--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -16,6 +16,7 @@ parameters:
     secret:            ILoveBrioches
     dir_web:           '../web'
 
+    enable_analytics:       false
     debug_toolbar:          true
     debug_redirects:        false
     use_assetic_controller: true
