--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,9 +73,7 @@ swiftmailer:
     port:      "%mailer_port%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
-    spool:
-        type: %swiftmailer_spool_type%
-        path: "%kernel.root_dir%/spool"
+    spool:     %swiftmailer_spool%
 
 #fos_user:
 #    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
