--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "php": ">=5.3.3",
         "symfony/symfony": "2.5.*",
         "doctrine/orm": "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle": "1.3.*@dev",
+        "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "~1.0",
         "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
@@ -19,7 +19,6 @@
         "sensio/framework-extra-bundle": "~3.0",
         "winzou/console-bundle": "1.*",
         "khepin/yaml-fixtures-bundle": "~0.8.1",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
         "incenteev/composer-parameter-handler": "~2.0",
         "alcalyn/payplug-bundle": "0.x",
         "alcalyn/flush-on-kernel-terminate-bundle": "dev-master"
